--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,15 @@ h1{
     color: red;
     font-size: 1rem;
 }
+
+@media only screen and (min-width: 600px) {
+    .body{
+        margin: 0 auto;
+        width: 300px;
+        height: 500px;
+    }
+}
+
 .body{
     margin: 0 auto;
     width: 500px;
@@ -34,10 +43,11 @@ h1{
     padding:10px;
 
 }
-
+@media only screen and (min-width: 768px){
 #genBtn:hover{
     cursor: pointer;
     transition: .5s;
     background-color: black;
     color: white;
+}
 }
