--- a/styles.css
+++ b/styles.css
@@ -35,19 +35,32 @@ h1{
     border-radius: 10px;
 }
 
-#genBtn{
-    background-color:rgba(255,50,50,1);
-    opacity: .9;
-    border: none;
-    border-radius: 10px;
-    padding:10px;
-
-}
-@media only screen and (min-width: 768px){
-#genBtn:hover{
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: rgb(255,30,30);
     cursor: pointer;
-    transition: .5s;
-    background-color: black;
-    color: white;
-}
-}
+  }
+  
+  .slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: rgb(255,30,30);
+    cursor: pointer;
+  }
